= Version History =

3.0:

- prepared for Elgg 1.9

2.5 (2013-10-25):

- added: related blogs on full view (sidebar or blog footer)
- added: owner information below blog
- added: blog container navigation (previous/next blog) on full view
- added: settings to control new full view views
- added: "in group" text added to subtitle of a blog
- added: featured blogs page
- added: new image size support
- added: support for the blog image in the river
- changed: CSS cleanup
- changed: moved blog image to own view
- removed: owner transfer code (replaced by ColdTrick/entity_tools plugin)

2.4 (2013-04-05):

- added: publication and expiration date on blogs (cron based)
- changed: cleaned up blog/save action
- changed: requirements for plugin to Elgg 1.8.9
- fixed: security issue in blog tools save form

2.3 (2012-07-31):

- added: widget title links for blog widget
- added: index_blog widget simple mode
- added: alt tag on blog image (at the request of ghumanz http://community.elgg.org/profile/harinderghumanz)
- fixed: incorrect context in index_blog widget
- fixed: blog widget more link in widget
- fixed: deprecated notices in combination with widget_manager
- fixed: crash (WSOD) while removing blog icon (#7)
- fixed: PHP warnings and notices
- fixed: wrong link in blog widget when used in groups
- fixed: depricated notice in blog save action
- fixed: index_blog widget slider mode
- fixed: index_blog widget preview mode
- fixed: index_blog widget showing unpublished blogs
- fixed: blog widget showing unpublished blogs

2.2 (2012-03-02):

- added: dutch translation
- fixed: depricated notice with widget_manager
- fixed: depricated notice on blog save form (thanks to ZigZag http://community.elgg.org/pg/profile/zigzag)
- fixed: categories no displaying the same as in core
- fixed: image align issue in full view
- changed: language file cleanup, use more core language keys
- changed: icon upload / remove handling