@@ -42,6 +42,7 @@ $tags = elgg_view('output/tags', array('tags' => $blog->tags));
 $date = elgg_view_friendly_time($blog->time_created);
 
 // The "on" status changes for comments, so best to check for !Off
+$comments_link = '';
 if ($blog->comments_on != 'Off') {
 	$comments_count = $blog->countComments();
 	//only display if there are commments
@@ -52,11 +53,7 @@ if ($blog->comments_on != 'Off') {
 			'text' => $text,
 			'is_trusted' => true,
 		));
-	} else {
-		$comments_link = '';
 	}
-} else {
-	$comments_link = '';
 }
 
 $info_class = "";
