@@ -1,8 +1,10 @@
-= Version History =
+Version History
+===============
 
 3.0:
 
 - prepared for Elgg 1.9
+- added: support for widget_manager group tool based widgets
 
 2.5 (2013-10-25):
 
